# xcx-compiler-2.0

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
XCX_Ecosystem_v1.0.0/: LICENSE.txt  README.txt
XCX_Ecosystem_v1.0.0/examples/: arithmetic.xcx  for.xcx  func.xcx  hello.xcx  set.xcx  table.xcx  while.xcx
documentation/: README.md
documentation/compiler/: architecture.md  lexer.md  parser.md  semantics.md  vm.md
documentation/language/: collections.md  control_flow.md  dates.md  errors_halt.md  functions_fibers.md  io_terminal.md  json_http.md  library_modules.md  operators.md  string_methods.md  syntax.md  types.md  variables.md
documentation/pax/: pax_manual.md
lib/: donut.xcx  math.xcx
src/: lib.rs  main.rs
src/backend/: mod.rs  repl.rs  tests.rs  vm.rs
src/diagnostic/: mod.rs  report.rs
src/lexer/: mod.rs  scanner.rs  tests.rs  token.rs
src/parser/: ast.rs  expander.rs  mod.rs  pratt.rs  tests.rs
src/sema/: checker.rs  interner.rs  mod.rs  symbol_table.rs  tests.rs
tests/: xcx_runner.rs
tests/hardening_suite/: test_complex_binding.xcx  test_deep_delegation.xcx  test_scope_integrity.xcx
tests/professional_suite/: 01_primitives.xcx  02_operators.xcx  03_control_flow.xcx  04_functions.xcx  05_arrays.xcx  06_sets.xcx  07_maps.xcx  08_halt_system.xcx  09_store_module.xcx  10_date_time.xcx  11_tables.xcx  12_json.xcx  13_fibers.xcx
tests/ultimate_suite/: test1.xcx  (+16 more)
xcx-installer/: Cargo.toml  app.manifest  build.rs  resources.rc
xcx-installer/src/: main.rs  uninstaller.rs
xcx-vscode/: README.md  extension.js  package.json
(+48 files in other folders)
