[package]
name = "xcx-installer"
version = "2.1.0"
edition = "2021"

[[bin]]
name = "xcx-setup"
path = "src/main.rs"

[[bin]]
name = "xcx-uninstall"
path = "src/uninstaller.rs"

[dependencies]
eframe = "0.24"
winreg = "0.50"
rfd = "0.12"
base64 = "0.21"
walkdir = "2"
dirs = "5"
sha2 = "0.10"
hex = "0.4"
winapi = { version = "0.3", features = ["winuser", "windef", "winbase", "shellapi"] }
image = "0.24"

[build-dependencies]
embed-resource = "2.4"

